Restored commit with good incidences and manually redid good changes.